# AgentCodeBase

./: .gitignore  README.md  pyproject.toml
codebase/: __init__.py
codebase/_utils/: __init__.py  _config.py  _logging.py  _send_feishu_message.py
codebase/draw/: README4AGENTS.md  README4HUMAN.md  __init__.py  generate_docs.py  generate_plots.py
codebase/draw/gallery_python_new/3d_plots/: lines3d.py  scatter3d.py  surface3d.py
codebase/draw/gallery_python_new/basic_plots/: bar_stacked.py  barchart.py  barh.py  horizontal_barchart_distribution.py  scatter_demo2.py  simple_plot.py
codebase/draw/gallery_python_new/composite_plots/: scatter_with_legend.py  subplots_demo.py  two_scales.py
codebase/draw/gallery_python_new/distribution_plots/: hist.py  histogram_bihistogram.py  histogram_cumulative.py  histogram_histtypes.py  histogram_multihist.py  histogram_normalization.py  scatter_hist.py
codebase/draw/gallery_python_new/heatmaps_contours/: contour_label_demo.py  contourf_demo.py  image_annotated_heatmap.py  pcolormesh_levels.py
codebase/draw/gallery_python_new/images_shapes/: layer_images.py  triinterp_demo.py
codebase/draw/gallery_python_new/misc_plots/: scales.py  table_demo.py
codebase/draw/prompts/: GALLERY_ALL.md  GALLERY_DOCS_RAW.md
codebase/llm/: __init__.py  llm_client.py
codebase/llm_pipeline/: __init__.py  pipeline.py
codebase/test/: __init__.py  test_api.py
config/: config.example.yaml
config/mplstyle/: computer_modern.mplstyle
example/: example_api_tester.py  example_llm_pipeline.py
(+17 files in other folders)
